--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="card">
         <h1 class="script-text">Moments I Want To Recreate With You</h1>
         <div class="image-box">
-            <img src="../Temp/images/fun.jpg" alt="Fun Moment">
+            <img src="images/fun.jpg" alt="Fun Moment">
             <div class="intro-note message">Some moments deserve a replay — not on screen, but in real life with you.</div>
         </div>
         <button onclick="nextSection()">Next →</button>
@@ -74,8 +74,8 @@
     <div class="card">
         <h1 class="script-text">Our Career Dreams</h1>
         <div class="career-gallery">
-            <img src="../Temp/images/mine.jpg" alt="Career 1">
-            <img src="../Temp/images/her.jpg" alt="Career 2">
+            <img src="images/mine.jpg" alt="Career 1">
+            <img src="images/her.jpg" alt="Career 2">
         </div>
         <div class="intro-note message">One day we’ll look back at these dreams… and smile at how far we came together.</div>
         <button onclick="nextSection()">Next →</button>
